--- a/src/app/styles/colors/contests.scss
+++ b/src/app/styles/colors/contests.scss
@@ -1,6 +1,4 @@
-@import '../../../bootstrap/scss/mixins';
-@import '../../../bootstrap/scss/functions';
-@import '../../../core/scss/base/bootstrap-extended/variables';
+@import 'styles/kep-imports';
 
 @mixin define-contest-colors($selector, $color, $background-light, $background-dark, $color-dark: false) {
   #{$selector} {
