--- a/src/app/modules/problems/pages/profile/profile.component.html
+++ b/src/app/modules/problems/pages/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper container-xxl p-0">
+<div class="content-wrapper container-xxl p-0" *ngIf="username">
   <div class="content-body">
     <section class="mt-2">
       <div class="row">
