--- a/src/app/shared/components/user-popover/user-popover/user-popover.component.html
+++ b/src/app/shared/components/user-popover/user-popover/user-popover.component.html
@@ -87,9 +87,4 @@
   <ng-content *ngIf="customContent"></ng-content>
 </a>
 
-<span *ngIf="!customContent && streak >= 7">
-  <ng-template #tipContent>
-    <img src="assets/images/icons/fire_red.png" height="19" alt=""> {{ streak }}
-  </ng-template>
-  <span class="badge badge-pill badge-kep" [ngbTooltip]="tipContent">KEP</span>  
-</span>
+<kep-badge *ngIf="!customContent && streak >= 7" [streak]="streak"></kep-badge>
