[REFACTORING] home page spinners

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -18,21 +18,27 @@
         @defer (on viewport){
           <top-rating-section></top-rating-section>
         } @placeholder (minimum 500ms) {
-          <spinner></spinner>
+          <div class="card" [style.height.px]="400">
+            <spinner></spinner>
+          </div>
         }
       </div>
       <div class="col-lg-4 col-12">
         @defer (on viewport){
           <system-section></system-section>
         } @placeholder (minimum 500ms) {
-          <spinner></spinner>
+          <div class="card" [style.height.px]="400">
+            <spinner></spinner>
+          </div>
         }
       </div>
       <div class="col-lg-4 col-12">
         @defer (on viewport){
           <users-chart-card></users-chart-card>
         } @placeholder (minimum 500ms) {
-          <spinner></spinner>
+          <div class="card" [style.height.px]="400">
+            <spinner></spinner>
+          </div>
         }
       </div>
     </div>
@@ -42,7 +48,9 @@
     @defer (on viewport){
       <calendar-section></calendar-section>
     } @placeholder (minimum 500ms) {
-      <spinner></spinner>
+      <div class="card" [style.height.px]="600">
+        <spinner></spinner>
+      </div>
     }
   </div>
 
@@ -52,7 +60,9 @@
         @defer (on viewport){
           <birthdays-section></birthdays-section>
         } @placeholder (minimum 500ms) {
-          <spinner></spinner>
+          <div class="card" [style.height.px]="600">
+            <spinner></spinner>
+          </div>
         }
       </div>
       <div class="col-lg-9 col-md-6 col-sm-12">
@@ -60,7 +70,9 @@
           @defer (on viewport){
             <posts-section></posts-section>
           } @placeholder (minimum 500ms) {
-            <spinner></spinner>
+            <div class="card" [style.height.px]="500">
+              <spinner></spinner>
+            </div>
           }
         </div>
       </div>
@@ -72,7 +84,9 @@
     @defer (on viewport) {
       <statistics-section></statistics-section>
     } @placeholder (minimum 500ms) {
-      <spinner></spinner>
+      <div class="card" [style.height.px]="200">
+        <spinner></spinner>
+      </div>
     }
   </div>
 
