--- a/src/core/scss/base/bootstrap-extended/_variables.scss
+++ b/src/core/scss/base/bootstrap-extended/_variables.scss
@@ -28,8 +28,8 @@ $warning: $orange !default;
 $light: $gray-50 !default;
 $dark: #071437 !default;
 
-$yellow: rgb(191 200 0 / 94%);
-$blue: #4362eef0;
+$yellow: #b8c00c;
+$blue: #4360ec;
 $brown: #ba782b;
 
 // Spacing
