--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -3,7 +3,7 @@
        class="avatar avatar-lg badge-glow bg-primary p-50 m-0 mb-1">
     <a class="text-white">
       <div class="avatar-content">
-        <kep-icon type="solid" name="problem"></kep-icon>
+        <kep-icon class="font-medium-4" type="solid" name="problem"></kep-icon>
       </div>
     </a>
   </div>
