--- a/src/app/modules/home/profile-section/profile-section.component.scss
+++ b/src/app/modules/home/profile-section/profile-section.component.scss
@@ -8,6 +8,10 @@ h2 {
   box-shadow: 0 0 10px #7367f0 !important;
 }
 
+.card {
+  background-color: #f5f8fa;
+}
+
 .rating-title-img {
   width: 24px !important;
   height: 24px !important;
