--- a/src/app/modules/home/system-section/system-section.component.html
+++ b/src/app/modules/home/system-section/system-section.component.html
@@ -12,7 +12,7 @@
     <div class="card-body custom mb-2 text-center ml-4 mr-4">
       <div class="avatar bg-primary p-50 m-0 mb-1">
         <div class="avatar-content">
-          <i data-feather="calendar" class="font-medium-5"></i>
+          <kep-icon class="font-medium-4" name="calendar"></kep-icon>
         </div>
       </div>
       <h2 class="font-weight-bolder">{{ days }}</h2>
