--- a/src/app/styles/vuexy-extended.scss
+++ b/src/app/styles/vuexy-extended.scss
@@ -3,6 +3,8 @@
 @import 'vuexy-extended/beautiful-table';
 @import 'vuexy-extended/content';
 @import 'vuexy-extended/dark-layout';
+@import 'vuexy-extended/flatpickr';
+@import 'vuexy-extended/forms';
 @import 'vuexy-extended/hljs';
 @import 'vuexy-extended/info-card';
 @import 'vuexy-extended/new-feature';
