[REFACTORING] home page

--- a/src/app/modules/home/activity-section/activity-section.component.html
+++ b/src/app/modules/home/activity-section/activity-section.component.html
@@ -3,7 +3,7 @@
 <div [@fadeInOnEnter] class="card card-activity bg-gradient-primary" *ngIf="statistics">
   <div class="card-header">
     <div class="card-title">
-      {{ statistics.date | date:'yyyy-MM-dd' }}
+      {{ statistics.date | localizedDate:'mediumDate' }}
     </div>
   </div>
 
@@ -15,18 +15,18 @@
       <span *ngIf="!statistics.dailyActivity" class="badge badge-danger badge-glow">
         <kep-icon class="font-small-2" name="minus-circle"></kep-icon>
       </span>
-      <h5>
+      <div class="title">
         {{ 'DailyActivity' | translate }}
-      </h5>
+      </div>
     </div>
 
     <div class="statistics-info">
       <span class="badge badge-primary badge-glow">
         <kep-icon class="font-small-2" name="attempt"></kep-icon>
       </span>
-      <h5>
+      <div class="title">
         {{ 'Attempts' | translate }}:
-      </h5>
+      </div>
       <strong class="font-medium-1">{{ statistics.attempts }}</strong>
     </div>
 
@@ -34,9 +34,9 @@
       <span class="badge badge-primary badge-glow">
         <kep-icon class="font-small-2" name="problem"></kep-icon>
       </span>
-      <h5>
+      <div class="title">
         {{ 'Problems' | translate }}:
-      </h5>
+      </div>
       <strong class="font-medium-1">{{ statistics.problems }}</strong>
     </div>
 
@@ -44,9 +44,9 @@
       <span class="badge badge-primary badge-glow">
         <kep-icon class="font-small-2" name="challenge"></kep-icon>
       </span>
-      <h5>
+      <div class="title">
         {{ 'Challenges' | translate }}:
-      </h5>
+      </div>
       <div class="font-medium-1">
         <span class="text-success font-medium-2" ngbTooltip="{{ 'Wins' | translate }}">W</span>
         {{ statistics.challenges.wins }}
@@ -63,9 +63,9 @@
       <span class="badge badge-success badge-glow">
         <kep-icon class="font-small-2" name="test"></kep-icon>
       </span>
-      <h5>
+      <div class="title">
         {{ 'Tests' | translate }}:
-      </h5>
+      </div>
       <strong class="font-medium-1">{{ statistics.tests }}</strong>
     </div>
   </div>
