[RENAME] problems profile => statistics

--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -17,8 +17,8 @@
       {{ 'Rating' | translate }}
     </a>
     <a routerLink="profile" class="btn btn-primary mr-md-1 mr-25">
-      <kep-icon name="profile"></kep-icon>
-      {{ 'Profile' | translate }}
+      <kep-icon name="statistics"></kep-icon>
+      {{ 'Statistics' | translate }}
     </a>
     <a routerLink="attempts" class="btn btn-primary">
       <kep-icon name="attempt"></kep-icon>
