--- a/src/app/modules/problems/pages/problems/problems.component.html
+++ b/src/app/modules/problems/pages/problems/problems.component.html
@@ -5,10 +5,37 @@
         <section-info></section-info>
       </div>
       <div class="col-lg-10 col-12 offset-0 offset-lg-1">
-        <section-study-plans></section-study-plans>
-        <section-topics></section-topics>
-        <section-problems-filter></section-problems-filter>
-        <section-problems-table></section-problems-table>
+        @defer (on viewport) {
+          <section-study-plans></section-study-plans>
+        } @placeholder {
+          <div class="card" [style.height.400]="">
+            <spinner></spinner>
+          </div>
+        }
+
+        @defer (on viewport) {
+          <section-topics></section-topics>
+        } @placeholder {
+          <div class="card" [style.height.200]="">
+            <spinner></spinner>
+          </div>
+        }
+
+        @defer (on viewport) {
+          <section-problems-filter></section-problems-filter>
+        } @placeholder {
+          <div class="card" [style.height.200]="">
+            <spinner></spinner>
+          </div>
+        }
+
+        @defer (on viewport) {
+          <section-problems-table></section-problems-table>
+        } @placeholder {
+          <div class="card" [style.height.400]="">
+            <spinner></spinner>
+          </div>
+        }
       </div>
     </div>
   </div>
