--- a/src/app/modules/landing-page/slides/slide-statistics/slide-statistics.component.html
+++ b/src/app/modules/landing-page/slides/slide-statistics/slide-statistics.component.html
@@ -1,12 +1,13 @@
 <div class="slide-statistics">
-  <div [@fadeInDown]="animationState" class="title text-center text-primary" [class]="isDarkSkin ? 'text-darken-1' : 'text-darken-4'">
+  <div [@fadeInDown]="animationState" [class]="isDarkSkin ? 'text-darken-1' : 'text-darken-4'"
+       class="title text-center text-primary">
     {{ 'Statistics' | translate }}
   </div>
 
   <div [@fadeInLeft]="animationState" class="img">
-    <img rel="preload" as="image" width="480" height="480" class="img-fluid" alt="main-img"
-      [src]="isDarkSkin ? 'assets/images/pages/coming-soon-dark.svg'
-                        : 'assets/images/pages/coming-soon.svg'" />
+    <img [src]="isDarkSkin ? 'assets/images/pages/coming-soon-dark.svg'
+                        : 'assets/images/pages/coming-soon.svg'" alt="main-img" as="image" class="img-fluid" height="480" rel="preload"
+         width="480"/>
   </div>
 
   <div [@fadeInUp]="animationState" class="statistics-container">
@@ -14,28 +15,28 @@
       <div class="col-lg-3 col-6">
         <div class="count-item decoration-bottom">
           <strong [countUp]="usersCount"
-            [options]="{ enableScrollSpy: true, duration: 5, reanimateOnClick: false }">0</strong>
+                  [options]="{ enableScrollSpy: true, duration: 5, reanimateOnClick: false }">0</strong>
           <span>{{ 'Users' | translate }}</span>
         </div>
       </div>
       <div class="col-lg-3 col-6">
         <div class="count-item decoration-top">
           <strong [countUp]="contestsCount"
-            [options]="{ enableScrollSpy: true, duration: 5, reanimateOnClick: false }">0</strong>
+                  [options]="{ enableScrollSpy: true, duration: 5, reanimateOnClick: false }">0</strong>
           <span>{{ 'Contests' | translate }}</span>
         </div>
       </div>
       <div class="col-lg-3 col-6">
         <div class="count-item decoration-bottom">
           <strong [countUp]="problemsCount"
-            [options]="{ enableScrollSpy: true, duration: 5, reanimateOnClick: false }">0</strong>
+                  [options]="{ enableScrollSpy: true, duration: 5, reanimateOnClick: false }">0</strong>
           <span>{{ 'Problems' | translate }}</span>
         </div>
       </div>
       <div class="col-lg-3 col-6">
         <div class="count-item">
           <strong [countUp]="attemptsCount"
-            [options]="{ enableScrollSpy: true, duration: 5, reanimateOnClick: false }">0</strong>
+                  [options]="{ enableScrollSpy: true, duration: 5, reanimateOnClick: false }">0</strong>
           <span>{{ 'Attempts' | translate }}</span>
         </div>
       </div>
