--- a/src/app/layout/components/menu/menu.component.html
+++ b/src/app/layout/components/menu/menu.component.html
@@ -1,11 +1,9 @@
-<!-- Vertical Menu -->
-<ng-container *ngIf="menuType === 'vertical-menu'">
-  <vertical-menu></vertical-menu>
-</ng-container>
-<!--/ Vertical Menu -->
-
-<!-- Horizontal Menu -->
-<ng-container *ngIf="menuType === 'horizontal-menu'">
-  <horizontal-menu></horizontal-menu>
-</ng-container>
-<!--/ Horizontal Menu -->
+@if (menuType === 'vertical-menu'){
+  @defer {
+    <vertical-menu></vertical-menu>
+  }
+} @else if (menuType === 'horizontal-menu'){
+  @defer {
+    <horizontal-menu></horizontal-menu>
+  }
+}
