[REFACTORING] contest-countdown-card

--- a/src/app/modules/contests/components/contest-countdown-card/contest-countdown-card.component.html
+++ b/src/app/modules/contests/components/contest-countdown-card/contest-countdown-card.component.html
@@ -27,7 +27,7 @@
       }
     </h4>
   </div>
-  <div class="card-footer">
+  <div class="card-footer full-width">
     <contest-countdown
       [clockColor]="'#fff'"
       [contest]="contest"
