--- a/src/app/styles/colors/contests.scss
+++ b/src/app/styles/colors/contests.scss
@@ -6,6 +6,7 @@
     --bg-gradient: #{$background-light};
     --box-shadow: 0 0 10px #{$color};
     --text-color: white;
+    --bg-light: #{mix(white, $color, 90)};
     @content;
   }
 
@@ -13,6 +14,7 @@
     #{$selector} {
       --bg-gradient: #{$background-dark};
       --box-shadow: 0 0 5px #{$color};
+      --bg-light: #{mix(black, $color, 60)};
 
       @if $background-dark != false {
         --bg: #{$color-dark};
